--- a/Arco.yaml
+++ b/Arco.yaml
@@ -1,34 +1,21 @@
-# // const http = require("http");
-# // const server = http.createServer((req, res) => {
-# //   if (req.method === "GET" && req.url === "/") {
-# //     res.write("Home page");
-# //     res.end();
-# //   } else if (req.method === "get" && req.url === "/about") {
-# //     res.write("About page");
-# //     res.end();
-# //   }
-# // });
-# // server.listen(3000, (error) => {
-# //   console.log("Failed to listen");
-# // });
 openapi: 3.0.0
 info:
-  version: 1.0.0
+  version: 1.0.1
   title: Arco E-commerce Website
-  description: API for Glow platform - skin care products 
+  description: API for Arco platform - Website services
   contact:
-    email: 1nourahalmanea@gmail.com
+    email: ghada.alnmla98@gmail.com
 servers:
   - url: http://localhost:3001
 tags:
   - name: products
     description: Everything about products
   - name: users
-    description:  Everything about Users
+    description: Everything about Users
   - name: orders
-    description:  Everything about orders
+    description: Everything about orders
   - name: categories
-    description:  Everything about categories  
+    description: Everything about categories
 components:
   schemas:
     User:
@@ -44,65 +31,66 @@ components:
           example: 1
         firstName:
           type: string
-          example: Norah
+          example: Jane
         lastName:
           type: string
-          example: AlManeea
+          example: Smith
         email:
           type: string
-          example: 1nourahalmanea@gmail.com
+          format: email
+          example: jane.smith@example.com
         password:
           type: string
-          example: 1234      
+          example: 1234
     Product:
-     type: object
-     required:
-       - name
-       - category
-       - description
-       - price
-       - image
-     properties:
-       id:
-         type: number
-         example: 1
-       name:
-         type: string
-         example: Serum
-       price:
-         type: number
-         example: 390
-       description:  
-         type: string
-         example: serum description
-       category:
-         $ref: '#/components/schemas/Category'
-       image:
-        type: string
-        example: img_url
+      type: object
+      required:
+        - name
+        - category
+        - description
+        - price
+        - image
+      properties:
+        id:
+          type: number
+          example: 1
+        name:
+          type: string
+          example: Build back end part of web application
+        price:
+          type: number
+          example: 200
+        description:
+          type: string
+          example: Details description
+        category:
+          $ref: "#/components/schemas/Category"
+        image:
+          type: string
+          example: img_url
     Order:
-     type: object
-     properties:
-      id:
-        type: number
-        example: 1
-      total:
-       type: number
-       example: 495
-      orderItems:
-        type: array
-        items:
-        $ref: '#/components/schemas/Product'
+      type: object
+      properties:
+        id:
+          type: number
+          example: 1
+        total:
+          type: number
+          example: 495
+        orderItems:
+          type: array
+          items:
+          $ref: "#/components/schemas/Product"
     Category:
-        type: object
-        properties:
-          id:
-           type: number
-          name:
-           type: string
+      type: object
+      properties:
+        id:
+          type: number
+        name:
+          type: string
 
 paths:
-# Products 
+  # Products
   /products:
     get:
       tags:
@@ -118,15 +106,16 @@ paths:
           name: limit
           schema:
             type: number
-          required: false 
+          required: false
         - in: query
           name: sortBy
           schema:
-            type: number
-            enum: 
-             - 'lowest price'
-             - 'highest price'
-          required: false    
+            type: string
+            example:
+               # "by name"
+            
+          required: false
+
       responses:
         200:
           description: Return all products
@@ -135,10 +124,10 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Product'
+                  $ref: "#/components/schemas/Product"
         500:
           description: Server error
-  /products/{productId}:
+
     post:
       tags:
         - products
@@ -147,17 +136,18 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Product'
+              $ref: "#/components/schemas/Product"
       responses:
         201:
-          description: Single product is created
+          description: product is created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Product'
+                $ref: "#/components/schemas/Product"
         500:
           description: Server error
 
+  /products/{productId}:
     get:
       tags:
         - products
@@ -174,7 +164,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Product'
+                $ref: "#/components/schemas/Product"
         500:
           description: Server error
     put:
@@ -185,7 +175,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Product'
+              $ref: "#/components/schemas/Product"
       parameters:
         - in: path
           name: productId
@@ -198,7 +188,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Product'
+                $ref: "#/components/schemas/Product"
         500:
           description: Server error
     delete:
@@ -215,7 +205,7 @@ paths:
         200:
           description: Delete a single product
         404:
-           description: Product not found
+          description: Product not found
         500:
           description: Server error
   /products/search:
@@ -238,15 +228,15 @@ paths:
                 type: array
                 items:
                   description: All the products are returned based on the search value
-                  $ref: '#/components/schemas/Product'
+                  $ref: "#/components/schemas/Product"
         404:
-           description: Product not found          
+          description: Product not found
         500:
           description: Server error
-        
-# Users
+
+  # Users
   /users:
-   get:
+    get:
       tags:
         - users
       summary: Get list of users
@@ -259,7 +249,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/User'    
+                  $ref: "#/components/schemas/User"
         500:
           description: Server error
   /users/{userId}:
@@ -271,20 +261,20 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: "#/components/schemas/User"
       responses:
         201:
           description: Single user is created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: "#/components/schemas/User"
         500:
           description: Server error
     get:
       tags:
         - users
-      summary:  get single user
+      summary: get single user
       parameters:
         - in: path
           name: userId
@@ -297,9 +287,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: "#/components/schemas/User"
         404:
-           description: User not found        
+          description: User not found
         500:
           description: Server error
     put:
@@ -310,7 +300,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: "#/components/schemas/User"
       parameters:
         - in: path
           name: userId
@@ -323,7 +313,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: "#/components/schemas/User"
         500:
           description: Server error
     delete:
@@ -340,7 +330,7 @@ paths:
         200:
           description: Delete a single user
         404:
-           description: User not found  
+          description: User not found
         500:
           description: Server error
   /users/login:
@@ -364,7 +354,7 @@ paths:
         401:
           description: User un-authorized
         500:
-          description: Server error     
+          description: Server error
   /users/logout:
     post:
       tags:
@@ -374,11 +364,11 @@ paths:
         200:
           description: User logged out
         500:
-          description: Server error            
-              
-# Categories
+          description: Server error
+
+  # Categories
   /categories:
-   get:
+    get:
       tags:
         - categories
       summary: Get list of categories
@@ -391,10 +381,9 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Category'    
+                  $ref: "#/components/schemas/Category"
         500:
           description: Server error
-  /categories/{categoryId}:
     post:
       tags:
         - categories
@@ -403,20 +392,21 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Category'
+              $ref: "#/components/schemas/Category"
       responses:
         201:
           description: Single category is created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Category'
+                $ref: "#/components/schemas/Category"
         500:
           description: Server error
+  /categories/{categoryId}:
     get:
       tags:
         - categories
-      summary:  get single category
+      summary: get single category
       parameters:
         - in: path
           name: categoryId
@@ -429,9 +419,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Category'
+                $ref: "#/components/schemas/Category"
         404:
-           description: Category not found        
+          description: Category not found
         500:
           description: Server error
     put:
@@ -442,7 +432,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Category'
+              $ref: "#/components/schemas/Category"
       parameters:
         - in: path
           name: categoryId
@@ -455,7 +445,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Category'
+                $ref: "#/components/schemas/Category"
         500:
           description: Server error
     delete:
@@ -472,13 +462,13 @@ paths:
         200:
           description: Delete a single category
         404:
-           description: category not found  
+          description: category not found
         500:
           description: Server error
-                  
-# Orders
+
+  # Orders
   /orders:
-   get:
+    get:
       tags:
         - orders
       summary: Get list of orders
@@ -491,10 +481,10 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Order'    
+                  $ref: "#/components/schemas/Order"
         500:
           description: Server error
-  /orders/{orderId}:
+
     post:
       tags:
         - orders
@@ -503,20 +493,21 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Order'
+              $ref: "#/components/schemas/Order"
       responses:
         201:
           description: Single order is created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Order'
+                $ref: "#/components/schemas/Order"
         500:
           description: Server error
+  /orders/{orderId}:
     get:
       tags:
         - orders
-      summary:  get single order
+      summary: get single order
       parameters:
         - in: path
           name: orderId
@@ -529,9 +520,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Order'
+                $ref: "#/components/schemas/Order"
         404:
-           description: Order not found        
+          description: Order not found
         500:
           description: Server error
     put:
@@ -542,7 +533,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Order'
+              $ref: "#/components/schemas/Order"
       parameters:
         - in: path
           name: orderId
@@ -555,7 +546,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Order'
+                $ref: "#/components/schemas/Order"
         500:
           description: Server error
     delete:
@@ -572,6 +563,6 @@ paths:
         200:
           description: Delete a single order
         404:
-           description: order not found  
+          description: order not found
         500:
           description: Server error
